MISC - Implement dynamic edit popup form

--- a/app/views/_toolbar_item.html.haml
+++ b/app/views/_toolbar_item.html.haml
@@ -1,4 +1,3 @@
-- link_attrs = toolbar_item.anchor_tag_options.inject({}){|sum, e| sum.merge!(e.first => e.last)}
 %li.toolbar_item
-  =link_to 'javascript:void(0);', link_attrs do
+  =link_to 'javascript:void(0);', toolbar_item.anchor_tag_options do
     %span= toolbar_item.title
