--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -1,7 +1,12 @@
-- if @grid.action_names.include?('edit')
+- if @grid.action_names.include?('edit') or @grid.action_names.include?('dynamic_edit')
   :ruby
     model_name = @grid.model.name.underscore
     columns = @grid.columns.dup.delete_if {|x| x.name.to_s == 'id' }
+    
+    if params[:update_version].present? and (version_columns = @grid.find_columns_by_version(params[:update_version])).present?
+      columns.select!{|x| version_columns.include?(x.name)}
+    end
+
     datepicker_str = ''
     object = @grid.model.new
     remote_paths = []
