--- a/app/views/manage_grid_states.html.haml
+++ b/app/views/manage_grid_states.html.haml
@@ -1,4 +1,4 @@
-.states_manage_form.hidden{:title => "Manage Grid States Configurations"}
+.states_manage_form{:title => "Manage Grid States Configurations"}
   = form_for :grid_states, :url => "/wulin_master/grid_states_manages/batch_update", :remote => true do |f|
     = hidden_field_tag "grid_name", @grid_name
     - default_option = @states_options.find{|x| x.first == 'default'}
