--- a/app/views/index.html.haml
+++ b/app/views/index.html.haml
@@ -2,7 +2,7 @@
 - @components = controller.screen.components
 - @components.select! {|x| x.class.name == params[:grid]} if params[:grid].present?
 
-- @components.each_with_index do |component, index|
+- @components.each do |component|
   = render :partial => '/grid', :locals => {:grid => component} if component.is_a?(WulinMaster::Grid)
   = render :partial => '/panel', :locals => {:panel => component} if component.is_a?(WulinMaster::Panel)
   - break if component.respond_to?(:fill_window?) and component.fill_window?
