MISC - Fix chosen dropdown was covered in dialog form

--- a/app/assets/stylesheets/grid_form.sass
+++ b/app/assets/stylesheets/grid_form.sass
@@ -3,7 +3,7 @@
 .create_form
   display: none
   background-color: #EDEDED !important
-  overflow-y: auto !important
+  // overflow-y: auto !important
   form
     padding: 20px 0
     .field
