FEATURE #14191 @1h - edit pop up for bulk update

--- a/app/assets/stylesheets/grid_form.css.scss
+++ b/app/assets/stylesheets/grid_form.css.scss
@@ -35,3 +35,16 @@
     }
   }
 }
+
+.input_clean_up {
+  display: inline-block;
+  vertical-align: middle;
+  width: 12px;
+  height: 13px;
+  font-size: 1px;
+  background: image-url('chosen-sprite.png') right top no-repeat;
+
+  &:hover {
+    background-position: right -11px;
+  }
+}
