MISC - create and edit dialog form changes

--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -52,6 +52,7 @@
                 :class             => 'chzn-select',                 |
                 :style             => "width:250px",                 |
                 :disabled          => column.options[:auto_fill],    |
+                :include_blank     => true,                          |
                 "data-target"      => "#{column_name}_target_flag",  |
                 "data-text-attr"   => column.option_text_attribute,  |
                 "data-column"      => column.name                    |
@@ -107,7 +108,10 @@
         $flagInput.attr('checked', 'checked');
         $input.val('');
         if ($input.is('select')) $input.trigger("liszt:updated");
-        if ($input.is(':checkbox')) $input.removeAttr('checked');
+        if ($input.is(':checkbox')) {
+          $input.removeAttr('checked');
+          $("[name='" + $input.attr('name') + "']:hidden").val('');
+        }
       });
     });
   
