--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -44,6 +44,7 @@
                 :style             => "width:250px",                 |
                 :class             => 'chzn-select',                 |
                 :disabled          => column.options[:auto_fill],    |
+                :include_blank     => true,                          |
                 "data-target"      => "#{column_name}_target_flag",  |
                 "data-text-attr"   => column.option_text_attribute,  |
                 "data-column"      => column.name                    |
