MISC - Create and update popup form corrections

--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -17,17 +17,17 @@
             column_name = get_column_name(column)
             label = column.options[:form_label] || column.label
           .field{:name => column_name}
-            %label{:for => "#{model_name}_#{column_name}"}= label
+            %label{:for => "#{model_name}_#{column_name}"}
+              = label
             %input.target_flag{"data-target" => "#{column_name}_target_flag", :type => "checkbox"}/
 
             - if column.sql_type.to_s == 'belongs_to'
               = form.select column_name,                            |
                 select_options(column),                             |
-                { include_blank: true },                            |
-                :include_blank     => !column.presence_required?,   |
-                :class             => 'chzn-select',                |
+                { include_blank: !column.presence_required? },      |
                 :style             => "width:250px",                |
                 :disabled          => column.options[:auto_fill],   |
+                "data-required"    => column.presence_required?,    |
                 "data-text-attr"   => column.option_text_attribute, |
                 "data-target"      => "#{column_name}_target_flag", |
                 "data-column"       => column.name                  |
@@ -35,24 +35,23 @@
             - elsif column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many'
               = form.select column.reflection.name.to_s,            |
                 select_options(column),                             |
-                { include_blank: true },                            |
-                :include_blank     => !column.presence_required?,   |
+                { include_blank: !column.presence_required? },      |
                 :multiple          => true,                         |
-                :class             => 'chzn-select',                |
                 :style             => "width:250px",                |
+                "data-required"    => column.presence_required?,    |
                 "data-text-attr"   => column.option_text_attribute, |
                 "data-target"      => "#{column_name}_target_flag", |
                 "data-column"      => column.name,                  |
                 :disabled          => column.options[:auto_fill]    |
-              = clean_up_tag(column_name)
+              = clean_up_for(column)
 
             - elsif column.options[:choices].present?
               = select_tag "#{model_name}[#{column_name}]",          |
                 select_tag_options(column),                          |
-                :class             => 'chzn-select',                 |
                 :style             => "width:250px",                 |
                 :disabled          => column.options[:auto_fill],    |
-                :include_blank     => true,                          |
+                :include_blank     => !column.presence_required?,    |
+                "data-required"    => column.presence_required?,     |
                 "data-target"      => "#{column_name}_target_flag",  |
                 "data-text-attr"   => column.option_text_attribute,  |
                 "data-column"      => column.name                    |
@@ -79,7 +78,7 @@
             - else
               - if column.sql_type.to_s.downcase == 'boolean'
                 = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name
-                = clean_up_tag(column_name)
+                = clean_up_for(column)
               - else
                 = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name
             .field_error
@@ -87,10 +86,12 @@
         %input.btn.success.update_btn{:id => "#{@grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
 
   :javascript
-    // $('##{@grid.name}_form .chzn-select').chosen({allow_single_deselect: true}).change(function(){
-    //   var flag = $('##{@grid.name}_form input.target_flag:checkbox[data-target="' + $(this).attr('data-target') + '"]');
-    //   if (flag.size() > 0) flag.attr('checked', 'checked');
-    // });
+    $('##{@grid.name}_form select[data-required="true"]').chosen();
+    $('##{@grid.name}_form select[data-required="false"]').chosen({allow_single_deselect: true});
+    $('##{@grid.name}_form select').off('change').on('change', function(){
+      var flag = $('##{@grid.name}_form input.target_flag:checkbox[data-target="' + $(this).attr('data-target') + '"]');
+      if (flag.size() > 0) flag.attr('checked', 'checked');
+    });
 
     $('##{@grid.name}_form input[data-date]').datepicker({ dateFormat: 'yy-mm-dd' });
     $('##{@grid.name}_form input[data-datetime]').datetimepicker({
