--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,5 +7,6 @@
     = csrf_meta_tags
     :javascript
       window._token = encodeURIComponent('#{form_authenticity_token}');
+      window._always_reset_form = #{WulinMaster.config.always_reset_form};
   %body
     = yield
