MISC - add form edit icon

--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -92,6 +92,10 @@ $toolbar_button_height: 50px;
   background: image-url("ui/batch_update.png") no-repeat top center;
 }
 
+.toolbar_icon_batch_edit {
+  background: image-url("ui/form_edit_icon.png") no-repeat top center;
+}
+
 .toolbar_icon_toggle {
   background: image-url("ui/toggle_icon.png") no-repeat top center;
 }
