--- a/app/assets/stylesheets/grid_form.css.scss
+++ b/app/assets/stylesheets/grid_form.css.scss
@@ -13,11 +13,15 @@
         margin-right: 5px;
         text-align: right;
         display: inline-block;
+        padding-top: 5px;
+        vertical-align: top;
       }
       input[type=text] {
         width: 220px;
         padding: 3px 2px;
       }
+
+
     }
     .submit {
       padding: 10px 0 10px 130px;
