--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -133,6 +133,10 @@ $toolbar_button_height: 50px;
   background: image-url("ui/all_icon.png") no-repeat top center;
 }
 
+.toolbar_icon_grid {
+  background: image-url("ui/grid_icon.png") no-repeat top center;
+}
+
 .add_detail_action {
   min-width: 75px;
 }
