BUG - fix the data-key value syntax of selector in new/edit form

--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -61,7 +61,7 @@
                       var key = $(this).val();
                       current_select.find("option").hide().trigger("liszt:updated");
                       current_select.val("").trigger("liszt:updated");
-                      current_select.find("option[data-key=" + key + "]").show().trigger("liszt:updated");
+                      current_select.find("option[data-key='" + key + "']").show().trigger("liszt:updated");
                     });
                   });
                   
