MISC - Datetimepicker bugfix

--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -87,7 +87,7 @@
     $('input[data-datetime]').datetimepicker({
       onlyTime: false,
       dateFormat: "yy-mm-dd",
-      timeFormat: 'hh:mm',
+      timeFormat: 'HH:mm',
       timeOnly: false,
       stepMinute: 1,
       minuteGrid: 0,
