--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -99,7 +99,7 @@
     $('##{@grid.name}_form input[data-datetime]').datetimepicker({
       onlyTime: false,
       dateFormat: "yy-mm-dd",
-      timeFormat: 'hh:mm',
+      timeFormat: 'HH:mm',
       timeOnly: false,
       stepMinute: 1,
       minuteGrid: 0,
