MISC - add clock icon

--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -137,6 +137,10 @@ $toolbar_button_height: 50px;
   background: image-url("ui/grid_icon.png") no-repeat top center;
 }
 
+.toolbar_icon_clock {
+  background: image-url("ui/clock_icon.png") no-repeat top center;
+}
+
 .add_detail_action {
   min-width: 75px;
 }
