--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -20,7 +20,7 @@
   display: inline-block;
   padding: 4px;
   font-size: 13px;
-  color: #808080;
+  // color: #808080;
   border: 1px solid #ccc;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
