MISC - Show base error at top of popup form

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -82,4 +82,10 @@ form {
     margin-left: 5px;
     max-width: 85px;
   }
+
+  .base_error {
+    padding-left: 130px;
+    line-height: 30px;
+    color: red;
+  }
 }
