--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -6,6 +6,7 @@
     object = @grid.model.new
   .create_form{:id => "#{@grid.name}_form", :title => "Create new #{model_name.titleize}", data: {action: 'create'}}
     = form_for object, :url => @grid.path do |form|
+      .base_error
       - columns.each do |column|
         - if new_form_able?(column)
           :ruby
