--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,8 @@
 %html
   %head
     %title= WulinMaster.config.app_title
+    %meta(http-equiv="content-type" content="text/html; charset=UTF-8")
+    %meta(http-equiv="content-language" content="en")
     = stylesheet_link_tag    *WulinMaster.stylesheets
     = javascript_include_tag *WulinMaster.javascripts
     = csrf_meta_tags
