--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -88,6 +88,10 @@ $toolbar_button_height: 50px;
   background: image-url("ui/create_icon.png") no-repeat top center;
 }
 
+.toolbar_icon_send_mail {
+  background: image-url('ui/mail_icon.png') no-repeat top center;
+}
+
 .toolbar_icon_edit {
   background: image-url("ui/batch_update.png") no-repeat top center;
 }
