FEATURE #16211 @2h - Allow to reset the default view of a grid for the user

--- a/app/assets/stylesheets/toolbar.css.scss
+++ b/app/assets/stylesheets/toolbar.css.scss
@@ -156,3 +156,7 @@ $toolbar_button_height: 50px;
 .configure_icon_s {
   background: image-url("ui/configure_icon_s.png") no-repeat top center;
 }
+
+.reset_icon_s {
+  background: image-url("ui/reset_icon_s.png") no-repeat top center;
+}
