--- a/app/assets/stylesheets/grid_states.css.scss
+++ b/app/assets/stylesheets/grid_states.css.scss
@@ -7,12 +7,13 @@
   select {
     width: 120px;
   }
-  a.manage {
+  a.manage, a.reset {
     height: 20px;
     width: 20px;
     display: inline-block;
     vertical-align: middle;
   }
+  a.reset { margin-left: 5px; }
 }
 
 .states_manage_form {
