FEATURE #16882 @30m - Show warning message when user use unsupported broswer.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,5 +10,10 @@
     :javascript
       window._token = encodeURIComponent('#{form_authenticity_token}');
       window._always_reset_form = #{WulinMaster.config.always_reset_form};
+      $(function(){
+        if (navigator.userAgent.indexOf('AppleWebKit') === -1 && navigator.userAgent.indexOf('Gecko') === -1) {
+          displayNewNotification('Current broswer is unsupported, Chrome is the only officially supported browser. Please switch to Chrome.', true);
+        }
+      });
   %body
     = yield
